trunk/spreadfs/pinefs/parser.out


Unused terminals:


Grammar

Rule 1     specification -> definition specification
Rule 2     specification -> program_def specification
Rule 3     specification -> definition
Rule 4     specification -> program_def
Rule 5     declaration -> type_specifier IDENT
Rule 6     declaration -> type_specifier IDENT LBRACK value RBRACK
Rule 7     declaration -> type_specifier IDENT LANGLE value RANGLE
Rule 8     declaration -> type_specifier IDENT LANGLE RANGLE
Rule 9     declaration -> OPAQUE IDENT LBRACK value RBRACK
Rule 10    declaration -> OPAQUE IDENT LANGLE value RANGLE
Rule 11    declaration -> STRING IDENT LANGLE value RANGLE
Rule 12    declaration -> OPAQUE IDENT LANGLE RANGLE
Rule 13    declaration -> STRING IDENT LANGLE RANGLE
Rule 14    declaration -> type_specifier STAR IDENT
Rule 15    declaration -> void
Rule 16    void -> VOID
Rule 17    value -> CONSTVAL
Rule 18    value -> IDENT
Rule 19    type_specifier -> UNSIGNED TYPE
Rule 20    type_specifier -> TYPE
Rule 21    type_specifier -> enum_spec
Rule 22    type_specifier -> struct_spec
Rule 23    type_specifier -> union_spec
Rule 24    type_specifier -> IDENT
Rule 25    enum_spec -> ENUM enum_body
Rule 26    enum_body -> LCBRACK enum_body_aux RCBRACK
Rule 27    enum_body_aux -> IDENT EQ value COMMA enum_body_aux
Rule 28    enum_body_aux -> IDENT EQ value
Rule 29    struct_spec -> STRUCT struct_body
Rule 30    struct_body -> LCBRACK struct_body_aux RCBRACK
Rule 31    struct_body_aux -> declaration SEMICOLON struct_body_aux
Rule 32    struct_body_aux -> declaration SEMICOLON
Rule 33    union_spec -> UNION union_body
Rule 34    union_body -> SWITCH LPAREN declaration RPAREN LCBRACK union_body_aux RCBRACK
Rule 35    union_body_aux -> union_case
Rule 36    union_body_aux -> union_case union_body_aux
Rule 37    union_case -> CASE value COLON declaration SEMICOLON
Rule 38    union_case -> DEFAULT COLON declaration SEMICOLON
Rule 39    constant_def -> CONST IDENT EQ CONSTVAL SEMICOLON
Rule 40    type_def -> TYPEDEF declaration SEMICOLON
Rule 41    type_def -> ENUM IDENT enum_body SEMICOLON
Rule 42    type_def -> STRUCT IDENT struct_body SEMICOLON
Rule 43    type_def -> UNION IDENT union_body SEMICOLON
Rule 44    definition -> type_def
Rule 45    definition -> constant_def
Rule 46    program_def -> PROGRAM IDENT LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON
Rule 47    version_defs -> version_def version_defs
Rule 48    version_defs -> version_def
Rule 49    version_def -> VERSION IDENT LCBRACK procedure_defs RCBRACK EQ CONSTVAL SEMICOLON
Rule 50    procedure_defs -> procedure_def procedure_defs
Rule 51    procedure_defs -> procedure_def
Rule 52    procedure_def -> arg_type_specifier IDENT LPAREN type_spec_list RPAREN EQ CONSTVAL SEMICOLON
Rule 53    type_spec_list -> arg_type_specifier COMMA type_spec_list
Rule 54    type_spec_list -> arg_type_specifier
Rule 55    arg_type_specifier -> type_specifier
Rule 56    arg_type_specifier -> void

Terminals, with rules where they appear

LCBRACK              : 26 30 34 46 49
TYPEDEF              : 40
RBRACK               : 6 9
STAR                 : 14
STRING               : 11 13
UNION                : 33 43
VOID                 : 16
ENUM                 : 25 41
VERSION              : 49
UNSIGNED             : 19
IDENT                : 5 6 7 8 9 10 11 12 13 14 18 24 27 28 39 41 42 43 46 49 52
LPAREN               : 34 52
RANGLE               : 7 8 10 11 12 13
CONST                : 39
EQ                   : 27 28 39 46 49 52
CASE                 : 37
LANGLE               : 7 8 10 11 12 13
RPAREN               : 34 52
STRUCT               : 29 42
SEMICOLON            : 31 32 37 38 39 40 41 42 43 46 49 52
OPAQUE               : 9 10 12
LBRACK               : 6 9
DEFAULT              : 38
SWITCH               : 34
PROGRAM              : 46
COLON                : 37 38
error                : 
RCBRACK              : 26 30 34 46 49
COMMA                : 27 53
TYPE                 : 19 20
CONSTVAL             : 17 39 46 49 52

Nonterminals, with rules where they appear

arg_type_specifier   : 52 53 54
enum_spec            : 21
version_def          : 47 48
struct_body_aux      : 30 31
enum_body            : 25 41
type_spec_list       : 52 53
struct_body          : 29 42
void                 : 15 56
program_def          : 2 4
union_case           : 35 36
declaration          : 31 32 34 37 38 40
enum_body_aux        : 26 27
procedure_def        : 50 51
union_spec           : 23
type_def             : 44
definition           : 1 3
type_specifier       : 5 6 7 8 14 55
constant_def         : 45
specification        : 1 2 0
struct_spec          : 22
value                : 6 7 9 10 11 27 28 37
union_body           : 33 43
union_body_aux       : 34 36
procedure_defs       : 49 50
version_defs         : 46 47


Parsing method: SLR


state 0

    S' -> . specification
    specification -> . definition specification
    specification -> . program_def specification
    specification -> . definition
    specification -> . program_def
    definition -> . type_def
    definition -> . constant_def
    program_def -> . PROGRAM IDENT LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON
    type_def -> . TYPEDEF declaration SEMICOLON
    type_def -> . ENUM IDENT enum_body SEMICOLON
    type_def -> . STRUCT IDENT struct_body SEMICOLON
    type_def -> . UNION IDENT union_body SEMICOLON
    constant_def -> . CONST IDENT EQ CONSTVAL SEMICOLON

    PROGRAM         shift and go to state 5
    TYPEDEF         shift and go to state 1
    ENUM            shift and go to state 4
    STRUCT          shift and go to state 10
    UNION           shift and go to state 3
    CONST           shift and go to state 2


state 1

    type_def -> TYPEDEF . declaration SEMICOLON
    declaration -> . type_specifier IDENT
    declaration -> . type_specifier IDENT LBRACK value RBRACK
    declaration -> . type_specifier IDENT LANGLE value RANGLE
    declaration -> . type_specifier IDENT LANGLE RANGLE
    declaration -> . OPAQUE IDENT LBRACK value RBRACK
    declaration -> . OPAQUE IDENT LANGLE value RANGLE
    declaration -> . STRING IDENT LANGLE value RANGLE
    declaration -> . OPAQUE IDENT LANGLE RANGLE
    declaration -> . STRING IDENT LANGLE RANGLE
    declaration -> . type_specifier STAR IDENT
    declaration -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body

    OPAQUE          shift and go to state 23
    STRING          shift and go to state 13
    UNSIGNED        shift and go to state 17
    TYPE            shift and go to state 25
    IDENT           shift and go to state 18
    VOID            shift and go to state 26
    ENUM            shift and go to state 12
    STRUCT          shift and go to state 22
    UNION           shift and go to state 14

  ! OPAQUE          [ shift and go to state 23 ]
  ! OPAQUE          [ shift and go to state 23 ]
  ! STRING          [ shift and go to state 13 ]

state 2

    constant_def -> CONST . IDENT EQ CONSTVAL SEMICOLON

    IDENT           shift and go to state 27


state 3

    type_def -> UNION . IDENT union_body SEMICOLON

    IDENT           shift and go to state 28


state 4

    type_def -> ENUM . IDENT enum_body SEMICOLON

    IDENT           shift and go to state 29


state 5

    program_def -> PROGRAM . IDENT LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON

    IDENT           shift and go to state 30


state 6

    specification -> program_def . specification
    specification -> program_def .
    specification -> . definition specification
    specification -> . program_def specification
    specification -> . definition
    specification -> . program_def
    definition -> . type_def
    definition -> . constant_def
    program_def -> . PROGRAM IDENT LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON
    type_def -> . TYPEDEF declaration SEMICOLON
    type_def -> . ENUM IDENT enum_body SEMICOLON
    type_def -> . STRUCT IDENT struct_body SEMICOLON
    type_def -> . UNION IDENT union_body SEMICOLON
    constant_def -> . CONST IDENT EQ CONSTVAL SEMICOLON

    $               reduce using rule 4
    PROGRAM         shift and go to state 5
    TYPEDEF         shift and go to state 1
    ENUM            shift and go to state 4
    STRUCT          shift and go to state 10
    UNION           shift and go to state 3
    CONST           shift and go to state 2


state 7

    definition -> type_def .

    TYPEDEF         reduce using rule 44
    ENUM            reduce using rule 44
    STRUCT          reduce using rule 44
    UNION           reduce using rule 44
    CONST           reduce using rule 44
    PROGRAM         reduce using rule 44
    $               reduce using rule 44


state 8

    specification -> definition . specification
    specification -> definition .
    specification -> . definition specification
    specification -> . program_def specification
    specification -> . definition
    specification -> . program_def
    definition -> . type_def
    definition -> . constant_def
    program_def -> . PROGRAM IDENT LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON
    type_def -> . TYPEDEF declaration SEMICOLON
    type_def -> . ENUM IDENT enum_body SEMICOLON
    type_def -> . STRUCT IDENT struct_body SEMICOLON
    type_def -> . UNION IDENT union_body SEMICOLON
    constant_def -> . CONST IDENT EQ CONSTVAL SEMICOLON

    $               reduce using rule 3
    PROGRAM         shift and go to state 5
    TYPEDEF         shift and go to state 1
    ENUM            shift and go to state 4
    STRUCT          shift and go to state 10
    UNION           shift and go to state 3
    CONST           shift and go to state 2


state 9

    definition -> constant_def .

    TYPEDEF         reduce using rule 45
    ENUM            reduce using rule 45
    STRUCT          reduce using rule 45
    UNION           reduce using rule 45
    CONST           reduce using rule 45
    PROGRAM         reduce using rule 45
    $               reduce using rule 45


state 10

    type_def -> STRUCT . IDENT struct_body SEMICOLON

    IDENT           shift and go to state 33


state 11

    S' -> specification .



state 12

    enum_spec -> ENUM . enum_body
    enum_body -> . LCBRACK enum_body_aux RCBRACK

    LCBRACK         shift and go to state 34


state 13

    declaration -> STRING . IDENT LANGLE value RANGLE
    declaration -> STRING . IDENT LANGLE RANGLE

    IDENT           shift and go to state 36

  ! IDENT           [ shift and go to state 36 ]

state 14

    union_spec -> UNION . union_body
    union_body -> . SWITCH LPAREN declaration RPAREN LCBRACK union_body_aux RCBRACK

    SWITCH          shift and go to state 37


state 15

    declaration -> void .

    SEMICOLON       reduce using rule 15
    RPAREN          reduce using rule 15


state 16

    type_specifier -> enum_spec .

    IDENT           reduce using rule 21
    STAR            reduce using rule 21
    COMMA           reduce using rule 21
    RPAREN          reduce using rule 21


state 17

    type_specifier -> UNSIGNED . TYPE

    TYPE            shift and go to state 39


state 18

    type_specifier -> IDENT .

    IDENT           reduce using rule 24
    STAR            reduce using rule 24
    COMMA           reduce using rule 24
    RPAREN          reduce using rule 24


state 19

    declaration -> type_specifier . IDENT
    declaration -> type_specifier . IDENT LBRACK value RBRACK
    declaration -> type_specifier . IDENT LANGLE value RANGLE
    declaration -> type_specifier . IDENT LANGLE RANGLE
    declaration -> type_specifier . STAR IDENT

    IDENT           shift and go to state 41
    STAR            shift and go to state 40

  ! IDENT           [ shift and go to state 41 ]
  ! IDENT           [ shift and go to state 41 ]
  ! IDENT           [ shift and go to state 41 ]

state 20

    type_def -> TYPEDEF declaration . SEMICOLON

    SEMICOLON       shift and go to state 42


state 21

    type_specifier -> union_spec .

    IDENT           reduce using rule 23
    STAR            reduce using rule 23
    COMMA           reduce using rule 23
    RPAREN          reduce using rule 23


state 22

    struct_spec -> STRUCT . struct_body
    struct_body -> . LCBRACK struct_body_aux RCBRACK

    LCBRACK         shift and go to state 44


state 23

    declaration -> OPAQUE . IDENT LBRACK value RBRACK
    declaration -> OPAQUE . IDENT LANGLE value RANGLE
    declaration -> OPAQUE . IDENT LANGLE RANGLE

    IDENT           shift and go to state 45

  ! IDENT           [ shift and go to state 45 ]
  ! IDENT           [ shift and go to state 45 ]

state 24

    type_specifier -> struct_spec .

    IDENT           reduce using rule 22
    STAR            reduce using rule 22
    COMMA           reduce using rule 22
    RPAREN          reduce using rule 22


state 25

    type_specifier -> TYPE .

    IDENT           reduce using rule 20
    STAR            reduce using rule 20
    COMMA           reduce using rule 20
    RPAREN          reduce using rule 20


state 26

    void -> VOID .

    IDENT           reduce using rule 16
    COMMA           reduce using rule 16
    RPAREN          reduce using rule 16
    SEMICOLON       reduce using rule 16


state 27

    constant_def -> CONST IDENT . EQ CONSTVAL SEMICOLON

    EQ              shift and go to state 46


state 28

    type_def -> UNION IDENT . union_body SEMICOLON
    union_body -> . SWITCH LPAREN declaration RPAREN LCBRACK union_body_aux RCBRACK

    SWITCH          shift and go to state 37


state 29

    type_def -> ENUM IDENT . enum_body SEMICOLON
    enum_body -> . LCBRACK enum_body_aux RCBRACK

    LCBRACK         shift and go to state 34


state 30

    program_def -> PROGRAM IDENT . LCBRACK version_defs RCBRACK EQ CONSTVAL SEMICOLON

    LCBRACK         shift and go to state 49


state 31

    specification -> program_def specification .

    $               reduce using rule 2


state 32

    specification -> definition specification .

    $               reduce using rule 1


state 33

    type_def -> STRUCT IDENT . struct_body SEMICOLON
    struct_body -> . LCBRACK struct_body_aux RCBRACK

    LCBRACK         shift and go to state 44


state 34

    enum_body -> LCBRACK . enum_body_aux RCBRACK
    enum_body_aux -> . IDENT EQ value COMMA enum_body_aux
    enum_body_aux -> . IDENT EQ value

    IDENT           shift and go to state 51

  ! IDENT           [ shift and go to state 51 ]

state 35

    enum_spec -> ENUM enum_body .

    IDENT           reduce using rule 25
    STAR            reduce using rule 25
    COMMA           reduce using rule 25
    RPAREN          reduce using rule 25


state 36

    declaration -> STRING IDENT . LANGLE value RANGLE
    declaration -> STRING IDENT . LANGLE RANGLE

    LANGLE          shift and go to state 53

  ! LANGLE          [ shift and go to state 53 ]

state 37

    union_body -> SWITCH . LPAREN declaration RPAREN LCBRACK union_body_aux RCBRACK

    LPAREN          shift and go to state 54


state 38

    union_spec -> UNION union_body .

    IDENT           reduce using rule 33
    STAR            reduce using rule 33
    COMMA           reduce using rule 33
    RPAREN          reduce using rule 33


state 39

    type_specifier -> UNSIGNED TYPE .

    IDENT           reduce using rule 19
    STAR            reduce using rule 19
    COMMA           reduce using rule 19
    RPAREN          reduce using rule 19


state 40

    declaration -> type_specifier STAR . IDENT

    IDENT           shift and go to state 55


state 41

    declaration -> type_specifier IDENT .
    declaration -> type_specifier IDENT . LBRACK value RBRACK
    declaration -> type_specifier IDENT . LANGLE value RANGLE
    declaration -> type_specifier IDENT . LANGLE RANGLE

    SEMICOLON       reduce using rule 5
    RPAREN          reduce using rule 5
    LBRACK          shift and go to state 57
    LANGLE          shift and go to state 56

  ! LANGLE          [ shift and go to state 56 ]

state 42

    type_def -> TYPEDEF declaration SEMICOLON .

    TYPEDEF         reduce using rule 40
    ENUM            reduce using rule 40
    STRUCT          reduce using rule 40
    UNION           reduce using rule 40
    CONST           reduce using rule 40
    PROGRAM         reduce using rule 40
    $               reduce using rule 40


state 43

    struct_spec -> STRUCT struct_body .

    IDENT           reduce using rule 29
    STAR            reduce using rule 29
    COMMA           reduce using rule 29
    RPAREN          reduce using rule 29


state 44

    struct_body -> LCBRACK . struct_body_aux RCBRACK
    struct_body_aux -> . declaration SEMICOLON struct_body_aux
    struct_body_aux -> . declaration SEMICOLON
    declaration -> . type_specifier IDENT
    declaration -> . type_specifier IDENT LBRACK value RBRACK
    declaration -> . type_specifier IDENT LANGLE value RANGLE
    declaration -> . type_specifier IDENT LANGLE RANGLE
    declaration -> . OPAQUE IDENT LBRACK value RBRACK
    declaration -> . OPAQUE IDENT LANGLE value RANGLE
    declaration -> . STRING IDENT LANGLE value RANGLE
    declaration -> . OPAQUE IDENT LANGLE RANGLE
    declaration -> . STRING IDENT LANGLE RANGLE
    declaration -> . type_specifier STAR IDENT
    declaration -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body

    OPAQUE          shift and go to state 23
    STRING          shift and go to state 13
    UNSIGNED        shift and go to state 17
    TYPE            shift and go to state 25
    IDENT           shift and go to state 18
    VOID            shift and go to state 26
    ENUM            shift and go to state 12
    STRUCT          shift and go to state 22
    UNION           shift and go to state 14

  ! OPAQUE          [ shift and go to state 23 ]
  ! OPAQUE          [ shift and go to state 23 ]
  ! STRING          [ shift and go to state 13 ]

state 45

    declaration -> OPAQUE IDENT . LBRACK value RBRACK
    declaration -> OPAQUE IDENT . LANGLE value RANGLE
    declaration -> OPAQUE IDENT . LANGLE RANGLE

    LBRACK          shift and go to state 61
    LANGLE          shift and go to state 60

  ! LANGLE          [ shift and go to state 60 ]

state 46

    constant_def -> CONST IDENT EQ . CONSTVAL SEMICOLON

    CONSTVAL        shift and go to state 62


state 47

    type_def -> UNION IDENT union_body . SEMICOLON

    SEMICOLON       shift and go to state 63


state 48

    type_def -> ENUM IDENT enum_body . SEMICOLON

    SEMICOLON       shift and go to state 64


state 49

    program_def -> PROGRAM IDENT LCBRACK . version_defs RCBRACK EQ CONSTVAL SEMICOLON
    version_defs -> . version_def version_defs
    version_defs -> . version_def
    version_def -> . VERSION IDENT LCBRACK procedure_defs RCBRACK EQ CONSTVAL SEMICOLON

    VERSION         shift and go to state 66


state 50

    type_def -> STRUCT IDENT struct_body . SEMICOLON

    SEMICOLON       shift and go to state 68


state 51

    enum_body_aux -> IDENT . EQ value COMMA enum_body_aux
    enum_body_aux -> IDENT . EQ value

    EQ              shift and go to state 69

  ! EQ              [ shift and go to state 69 ]

state 52

    enum_body -> LCBRACK enum_body_aux . RCBRACK

    RCBRACK         shift and go to state 70


state 53

    declaration -> STRING IDENT LANGLE . value RANGLE
    declaration -> STRING IDENT LANGLE . RANGLE
    value -> . CONSTVAL
    value -> . IDENT

    RANGLE          shift and go to state 73
    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 54

    union_body -> SWITCH LPAREN . declaration RPAREN LCBRACK union_body_aux RCBRACK
    declaration -> . type_specifier IDENT
    declaration -> . type_specifier IDENT LBRACK value RBRACK
    declaration -> . type_specifier IDENT LANGLE value RANGLE
    declaration -> . type_specifier IDENT LANGLE RANGLE
    declaration -> . OPAQUE IDENT LBRACK value RBRACK
    declaration -> . OPAQUE IDENT LANGLE value RANGLE
    declaration -> . STRING IDENT LANGLE value RANGLE
    declaration -> . OPAQUE IDENT LANGLE RANGLE
    declaration -> . STRING IDENT LANGLE RANGLE
    declaration -> . type_specifier STAR IDENT
    declaration -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body

    OPAQUE          shift and go to state 23
    STRING          shift and go to state 13
    UNSIGNED        shift and go to state 17
    TYPE            shift and go to state 25
    IDENT           shift and go to state 18
    VOID            shift and go to state 26
    ENUM            shift and go to state 12
    STRUCT          shift and go to state 22
    UNION           shift and go to state 14

  ! OPAQUE          [ shift and go to state 23 ]
  ! OPAQUE          [ shift and go to state 23 ]
  ! STRING          [ shift and go to state 13 ]

state 55

    declaration -> type_specifier STAR IDENT .

    SEMICOLON       reduce using rule 14
    RPAREN          reduce using rule 14


state 56

    declaration -> type_specifier IDENT LANGLE . value RANGLE
    declaration -> type_specifier IDENT LANGLE . RANGLE
    value -> . CONSTVAL
    value -> . IDENT

    RANGLE          shift and go to state 77
    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 57

    declaration -> type_specifier IDENT LBRACK . value RBRACK
    value -> . CONSTVAL
    value -> . IDENT

    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 58

    struct_body -> LCBRACK struct_body_aux . RCBRACK

    RCBRACK         shift and go to state 79


state 59

    struct_body_aux -> declaration . SEMICOLON struct_body_aux
    struct_body_aux -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 80

  ! SEMICOLON       [ shift and go to state 80 ]

state 60

    declaration -> OPAQUE IDENT LANGLE . value RANGLE
    declaration -> OPAQUE IDENT LANGLE . RANGLE
    value -> . CONSTVAL
    value -> . IDENT

    RANGLE          shift and go to state 82
    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 61

    declaration -> OPAQUE IDENT LBRACK . value RBRACK
    value -> . CONSTVAL
    value -> . IDENT

    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 62

    constant_def -> CONST IDENT EQ CONSTVAL . SEMICOLON

    SEMICOLON       shift and go to state 84


state 63

    type_def -> UNION IDENT union_body SEMICOLON .

    TYPEDEF         reduce using rule 43
    ENUM            reduce using rule 43
    STRUCT          reduce using rule 43
    UNION           reduce using rule 43
    CONST           reduce using rule 43
    PROGRAM         reduce using rule 43
    $               reduce using rule 43


state 64

    type_def -> ENUM IDENT enum_body SEMICOLON .

    TYPEDEF         reduce using rule 41
    ENUM            reduce using rule 41
    STRUCT          reduce using rule 41
    UNION           reduce using rule 41
    CONST           reduce using rule 41
    PROGRAM         reduce using rule 41
    $               reduce using rule 41


state 65

    version_defs -> version_def . version_defs
    version_defs -> version_def .
    version_defs -> . version_def version_defs
    version_defs -> . version_def
    version_def -> . VERSION IDENT LCBRACK procedure_defs RCBRACK EQ CONSTVAL SEMICOLON

    RCBRACK         reduce using rule 48
    VERSION         shift and go to state 66


state 66

    version_def -> VERSION . IDENT LCBRACK procedure_defs RCBRACK EQ CONSTVAL SEMICOLON

    IDENT           shift and go to state 86


state 67

    program_def -> PROGRAM IDENT LCBRACK version_defs . RCBRACK EQ CONSTVAL SEMICOLON

    RCBRACK         shift and go to state 87


state 68

    type_def -> STRUCT IDENT struct_body SEMICOLON .

    TYPEDEF         reduce using rule 42
    ENUM            reduce using rule 42
    STRUCT          reduce using rule 42
    UNION           reduce using rule 42
    CONST           reduce using rule 42
    PROGRAM         reduce using rule 42
    $               reduce using rule 42


state 69

    enum_body_aux -> IDENT EQ . value COMMA enum_body_aux
    enum_body_aux -> IDENT EQ . value
    value -> . CONSTVAL
    value -> . IDENT

    CONSTVAL        shift and go to state 74
    IDENT           shift and go to state 72


state 70

    enum_body -> LCBRACK enum_body_aux RCBRACK .

    IDENT           reduce using rule 26
    STAR            reduce using rule 26
    SEMICOLON       reduce using rule 26
    COMMA           reduce using rule 26
    RPAREN          reduce using rule 26


state 71

    declaration -> STRING IDENT LANGLE value . RANGLE

    RANGLE          shift and go to state 89


state 72

    value -> IDENT .

    RBRACK          reduce using rule 18
    RANGLE          reduce using rule 18
    COMMA           reduce using rule 18
    RCBRACK         reduce using rule 18
    COLON           reduce using rule 18


state 73

    declaration -> STRING IDENT LANGLE RANGLE .

    SEMICOLON       reduce using rule 13
    RPAREN          reduce using rule 13


state 74

    value -> CONSTVAL .

    RBRACK          reduce using rule 17
    RANGLE          reduce using rule 17
    COMMA           reduce using rule 17
    RCBRACK         reduce using rule 17
    COLON           reduce using rule 17


state 75

    union_body -> SWITCH LPAREN declaration . RPAREN LCBRACK union_body_aux RCBRACK

    RPAREN          shift and go to state 90


state 76

    declaration -> type_specifier IDENT LANGLE value . RANGLE

    RANGLE          shift and go to state 91


state 77

    declaration -> type_specifier IDENT LANGLE RANGLE .

    SEMICOLON       reduce using rule 8
    RPAREN          reduce using rule 8


state 78

    declaration -> type_specifier IDENT LBRACK value . RBRACK

    RBRACK          shift and go to state 92


state 79

    struct_body -> LCBRACK struct_body_aux RCBRACK .

    IDENT           reduce using rule 30
    STAR            reduce using rule 30
    SEMICOLON       reduce using rule 30
    COMMA           reduce using rule 30
    RPAREN          reduce using rule 30


state 80

    struct_body_aux -> declaration SEMICOLON . struct_body_aux
    struct_body_aux -> declaration SEMICOLON .
    struct_body_aux -> . declaration SEMICOLON struct_body_aux
    struct_body_aux -> . declaration SEMICOLON
    declaration -> . type_specifier IDENT
    declaration -> . type_specifier IDENT LBRACK value RBRACK
    declaration -> . type_specifier IDENT LANGLE value RANGLE
    declaration -> . type_specifier IDENT LANGLE RANGLE
    declaration -> . OPAQUE IDENT LBRACK value RBRACK
    declaration -> . OPAQUE IDENT LANGLE value RANGLE
    declaration -> . STRING IDENT LANGLE value RANGLE
    declaration -> . OPAQUE IDENT LANGLE RANGLE
    declaration -> . STRING IDENT LANGLE RANGLE
    declaration -> . type_specifier STAR IDENT
    declaration -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body

    RCBRACK         reduce using rule 32
    OPAQUE          shift and go to state 23
    STRING          shift and go to state 13
    UNSIGNED        shift and go to state 17
    TYPE            shift and go to state 25
    IDENT           shift and go to state 18
    VOID            shift and go to state 26
    ENUM            shift and go to state 12
    STRUCT          shift and go to state 22
    UNION           shift and go to state 14

  ! OPAQUE          [ shift and go to state 23 ]
  ! OPAQUE          [ shift and go to state 23 ]
  ! STRING          [ shift and go to state 13 ]

state 81

    declaration -> OPAQUE IDENT LANGLE value . RANGLE

    RANGLE          shift and go to state 94


state 82

    declaration -> OPAQUE IDENT LANGLE RANGLE .

    SEMICOLON       reduce using rule 12
    RPAREN          reduce using rule 12


state 83

    declaration -> OPAQUE IDENT LBRACK value . RBRACK

    RBRACK          shift and go to state 95


state 84

    constant_def -> CONST IDENT EQ CONSTVAL SEMICOLON .

    TYPEDEF         reduce using rule 39
    ENUM            reduce using rule 39
    STRUCT          reduce using rule 39
    UNION           reduce using rule 39
    CONST           reduce using rule 39
    PROGRAM         reduce using rule 39
    $               reduce using rule 39


state 85

    version_defs -> version_def version_defs .

    RCBRACK         reduce using rule 47


state 86

    version_def -> VERSION IDENT . LCBRACK procedure_defs RCBRACK EQ CONSTVAL SEMICOLON

    LCBRACK         shift and go to state 96


state 87

    program_def -> PROGRAM IDENT LCBRACK version_defs RCBRACK . EQ CONSTVAL SEMICOLON

    EQ              shift and go to state 97


state 88

    enum_body_aux -> IDENT EQ value . COMMA enum_body_aux
    enum_body_aux -> IDENT EQ value .

    COMMA           shift and go to state 98
    RCBRACK         reduce using rule 28


state 89

    declaration -> STRING IDENT LANGLE value RANGLE .

    SEMICOLON       reduce using rule 11
    RPAREN          reduce using rule 11


state 90

    union_body -> SWITCH LPAREN declaration RPAREN . LCBRACK union_body_aux RCBRACK

    LCBRACK         shift and go to state 99


state 91

    declaration -> type_specifier IDENT LANGLE value RANGLE .

    SEMICOLON       reduce using rule 7
    RPAREN          reduce using rule 7


state 92

    declaration -> type_specifier IDENT LBRACK value RBRACK .

    SEMICOLON       reduce using rule 6
    RPAREN          reduce using rule 6


state 93

    struct_body_aux -> declaration SEMICOLON struct_body_aux .

    RCBRACK         reduce using rule 31


state 94

    declaration -> OPAQUE IDENT LANGLE value RANGLE .

    SEMICOLON       reduce using rule 10
    RPAREN          reduce using rule 10


state 95

    declaration -> OPAQUE IDENT LBRACK value RBRACK .

    SEMICOLON       reduce using rule 9
    RPAREN          reduce using rule 9


state 96

    version_def -> VERSION IDENT LCBRACK . procedure_defs RCBRACK EQ CONSTVAL SEMICOLON
    procedure_defs -> . procedure_def procedure_defs
    procedure_defs -> . procedure_def
    procedure_def -> . arg_type_specifier IDENT LPAREN type_spec_list RPAREN EQ CONSTVAL SEMICOLON
    arg_type_specifier -> . type_specifier
    arg_type_specifier -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body

    UNSIGNED        shift and go to state 17
    TYPE            shift and go to state 25
    IDENT           shift and go to state 18
    VOID            shift and go to state 26
    ENUM            shift and go to state 12
    STRUCT          shift and go to state 22
    UNION           shift and go to state 14


state 97

    program_def -> PROGRAM IDENT LCBRACK version_defs RCBRACK EQ . CONSTVAL SEMICOLON

    CONSTVAL        shift and go to state 105


state 98

    enum_body_aux -> IDENT EQ value COMMA . enum_body_aux
    enum_body_aux -> . IDENT EQ value COMMA enum_body_aux
    enum_body_aux -> . IDENT EQ value

    IDENT           shift and go to state 51

  ! IDENT           [ shift and go to state 51 ]

state 99

    union_body -> SWITCH LPAREN declaration RPAREN LCBRACK . union_body_aux RCBRACK
    union_body_aux -> . union_case
    union_body_aux -> . union_case union_body_aux
    union_case -> . CASE value COLON declaration SEMICOLON
    union_case -> . DEFAULT COLON declaration SEMICOLON

    CASE            shift and go to state 107
    DEFAULT         shift and go to state 108


state 100

    procedure_def -> arg_type_specifier . IDENT LPAREN type_spec_list RPAREN EQ CONSTVAL SEMICOLON

    IDENT           shift and go to state 111


state 101

    arg_type_specifier -> void .

    IDENT           reduce using rule 56
    COMMA           reduce using rule 56
    RPAREN          reduce using rule 56


state 102

    procedure_defs -> procedure_def . procedure_defs
    procedure_defs -> procedure_def .
    procedure_defs -> . procedure_def procedure_defs
    procedure_defs -> . procedure_def
    procedure_def -> . arg_type_specifier IDENT LPAREN type_spec_list RPAREN EQ CONSTVAL SEMICOLON
    arg_type_specifier -> . type_specifier
    arg_type_specifier -> . void
    type_specifier -> . UNSIGNED TYPE
    type_specifier -> . TYPE
    type_specifier -> . enum_spec
    type_specifier -> . struct_spec
    type_specifier -> . union_spec
    type_specifier -> . IDENT
    void -> . VOID
    enum_spec -> . ENUM enum_body
    struct_spec -> . STRUCT struct_body
    union_spec -> . UNION union_body
